Fix crash on null event pointer in Abstract Input Action

The check in kis_abstract_input_action.cpp is for sure valid
because it happens within
KisShortcutMatcher::tryRunSingleActionShortcutImpl,
and it has a warning that the event can be null.
This commit also includes some more sanity checks that
might be upgraded into KIS_SAFE_ASSERT if needed.

BUG:520581